<resources>
    <string name="app_name">Nice Vaping</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contrasena</string>
    <string name="action_sign_in">Inicia sesión</string>
    <string name="action_na">Crear cuenta</string>
    <string name="action_olvido">Olvido su Contraseña?</string>
    <string name="action_sign_in_short">Inicia sesión</string>
    <string name="error_invalid_email">Este email no es valido</string>
    <string name="error_invalid_password">Esta Contraseña es muy corta</string>
    <string name="error_incorrect_password">Esta Contraseña es incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email_nv">soporte@nicevaping.com</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_info">Mi perfil</string>
    <string name="menu_bt">Conectar con bluethoot</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_salir">Salir</string>
    <string name="menu_cs">Cerrar sesión</string>

    <string name="home_web">www.nicevaping.com</string>

    <string name="vap">Vaporizador</string>
    <string name="res">Resistencia</string>
    <string name="save">Guardar</string>

    <string name="bn_graficar">Graficar historial</string>
    <string name="bn_conectar">Conectar</string>
    <string name="bn_parar">Parar</string>
    <string name="bn_ocultar">Ocultar historial</string>

    <string name="bn_temp">Temperatura</string>
    <string name="bn_resistencia">Resistencia</string>
    <string name="bn_res_status">Estatus Resistencia</string>
    <string name="bn_temp_liq">Temp liquido</string>
    <string name="bn_temp_vap">Temperatura Vapor</string>

    <string name="bn_config_new">Nueva Resistencia</string>
    <string name="bn_config_liquido">Llenado de liquido</string>
    <string name="bn_config_actions">Menú de acciones</string>

    <string name="title_activity_menu">Menú </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_main_menu">Menú principal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Configuración</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>

    <string-array name="VapsItems">
        <item>Smock v22</item>
        <item>Joytec AIO</item>
        <item>Smock x8</item>
        <item>Vaporesso s2</item>
    </string-array>

    <string-array name="ResItems">
        <item>8 oms, 30 watts</item>
        <item>5 oms, 25 watts</item>
        <item>6 oms, 35 watts</item>
        <item>8 oms, 25 watts</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
