<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_home"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_me"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_bt"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            android:title="@string/menu_bt" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_productos"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            android:title="@string/menu_productos" />
    </group>

    <item android:title="Manejo">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_cerrar"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold"
                android:title="@string/menu_cs" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_salir"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold"
                android:title="@string/menu_salir" />
        </menu>
    </item>

</menu>
