<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/pbbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/nicevaping_logo_v1" />


            <AutoCompleteTextView
                android:id="@+id/edtuserid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#5d5d5d"
                android:hint="@string/prompt_user"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edtpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#5d5d5d"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:background="@drawable/button_acept"
                android:elevation="@dimen/sd_fab_mini_size"
                android:padding="10dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bntNaccount"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:text="@string/action_na"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bntOlvidar"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:text="@string/action_olvido"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>