<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alexi.horus_v35.ConfigVap">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/vap" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/res" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:prompt="@string/vap"
                    android:entries="@array/VapsItems"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:prompt="@string/vap"
                    android:entries="@array/ResItems"
                    android:layout_weight="1" />

            </LinearLayout>

            <Button
                android:id="@+id/bntGuardarC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_acept"
                android:text="@string/save"
                android:textColor="@color/cardview_light_background" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="26dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bn_config_actions"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAlignment="center" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bntNewResis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_action"
                    android:text="@string/bn_config_new"
                    android:textColor="@color/cardview_light_background" />

                <Button
                    android:id="@+id/bntNewLiquido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_action"
                    android:text="@string/bn_config_liquido"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>

            <Button
                android:id="@+id/bntSalirVap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_cancel"
                android:text="@string/menu_salir"
                android:textColor="@color/cardview_light_background" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
